[gd_scene load_steps=9 format=2]

[ext_resource path="res://prefab_scenes/obstacles/ItemUIData.gd" type="Script" id=1]
[ext_resource path="res://assets/images/cat_floor.png" type="Texture" id=2]
[ext_resource path="res://prefab_scenes/CatCaptureBox/CatCaptureBox.gd" type="Script" id=3]
[ext_resource path="res://assets/images/cat_logo.png" type="Texture" id=5]
[ext_resource path="res://assets/images/circle_grad.png" type="Texture" id=6]
[ext_resource path="res://assets/images/box_lid.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 4.51434

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[node name="CatCaptureBox" type="Node2D" groups=[
"Resetable",
]]
script = ExtResource( 3 )

[node name="ItemUIData" type="Node2D" parent="."]
script = ExtResource( 1 )
item_ui_size = Vector2( 64, 64 )
item_ui_texture = ExtResource( 7 )
item_ui_color = Color( 1, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.584314 )
texture = ExtResource( 5 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="LightNoCapture" type="Light2D" parent="."]
texture = ExtResource( 6 )
texture_scale = 0.5
color = Color( 1, 0, 0, 1 )
energy = 2.0

[node name="SpriteBoxLid" type="Sprite" parent="."]
position = Vector2( -1.6818, 0.420442 )
scale = Vector2( 1.0854, 1.06569 )
z_index = 2
texture = ExtResource( 7 )

[node name="LightCapture1" type="Light2D" parent="."]
position = Vector2( 45.2548, 4.24264 )
scale = Vector2( 1, 4.13955 )
texture = ExtResource( 6 )
texture_scale = 0.5
color = Color( 0, 1, 0.0392157, 1 )

[node name="LightCapture2" type="Light2D" parent="."]
position = Vector2( -44.9013, 1.59099 )
scale = Vector2( 1, 3.36174 )
texture = ExtResource( 6 )
texture_scale = 0.5
color = Color( 0, 1, 0.0392157, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
